# models/task.js
@@ -7,6 +7,12 @@ const taskSchema = new Schema({
   title: String,
   description: String,
   dateToDo: String,
+  starttime: String,
+  endtime: String,
+  collaboration: {
+    require: false,
+    type: String,
+  },
   status: {
     type: String,
     enum: ["done", "not done", "in progress"],
@@ -15,4 +21,4 @@ const taskSchema = new Schema({
 
 const Task = mongoose.model("Task", taskSchema, "tasks");
 
-module.exports = Task;
+module.exports = { Task };
